css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Roboto', sans-serif;
    max-width: 100%;
}

h1, h2, h3, h4, h5 {
    font-size: 18px;
    margin-bottom: 15px;
    font-family: 'Rubik', sans-serif;
}

p {
    line-height: 1.4;
}

.container {
    width: 800px;
    margin: 0 auto;
}

.top-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    margin-bottom: 20px;
    border-bottom: 1px dashed black;
}

.top-content .text-container {
    width: 48%;
    padding: 0 1%;
    padding-bottom: 20px;  
}

.middle-content {
    margin-bottom: 20px;
    border-bottom: 1px dashed black;
}

.middle-content h2 {
    padding: 0 2%;
    margin-bottom: 0;
}

.middle-content .boxes {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.middle-content .boxes .box {
    width: 12.5%;
    height: 100px;
    background: black;
    margin: 20px 2.5%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}

#one {
    background: teal;
}

#two{
    background: gold;
}

#three{
    background:cadetblue;
}

#four{
    background:coral;
}

#five{
    background:crimson;
}

#six{
    background:forestgreen;
}

#seven{
    background: darkorchid;
}

#eight{
    background: hotpink;
}

#nine{
    background: indigo;
}

#ten{
    background: dodgerblue;
}


.bottom-content {
    display: flex;
    margin: 0 2% 20px;
    justify-content: space-around;
}

.bottom-content .text-container {
    padding-right: 4%;
}

.bottom-content .text-container:last-child {
    padding-right: 0;
}

footer {
    width: 100%;
    background: black;
}

footer nav {
    width: 60%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 2%;
    font-size: 14px;
}

footer nav a {
    color: white;
    text-decoration: none;
}

.top-navigation{
    /* border: 1px solid red; */
    display: flex;
    /* justify-content: space-between; */
    align-items: flex-end;
}
    
    .top-navigation a{
        text-decoration: none;
        /* border: 1px solid purple; */
        color: black;
        width:50%;
        /* display: flex; */
        /* leave this alone */
        /* align-items: center; */
        margin-left: 8%; 
        padding-left: 10%;
        margin-bottom: 2%;
    }

    .nav-contents{
        display:flex;
    }
    
.aboutPara{
    border-bottom: dashed 1px black ;
    margin-bottom: 2%;
    margin-top: 2%;
    padding-bottom: 2%;
}

    .images{
        display:flex;
        justify-content: space-between;
    }
    .images2{
        display:flex;
        justify-content: space-between;
    }
    

    .paragraphs{
        display:flex;
        justify-content: space-between;
        margin: 10px 0;
        width: 100%;
        justify-content: space-around;
    }

    .paragraphs2{
        display:flex;
        justify-content: space-around;
        margin-bottom: 20px;
        width: 100%;
        padding-right: 2%;
        padding-left: 2%;
        /* justify-content: space-around; */
    }


    .individual{
        /* margin-left: 13px;
        margin-right: 13px; */
        /* border: 1px solid black; */
        width: 100%;
        padding: 2%;
        border-bottom: dashed 1px black ;
        /* margin-left: 4%;
        margin-right: 4%; */
    }
/* 
    div.test{
        display: flex;
        border: 5px solid yellow;
        margin-right: 90%;
    } */


    .individual2{
        /* margin-left: 13px;
        margin-right: 13px; */
        /* border: 1px solid black; */
        width: 100%;
        padding: 2%;
        border-bottom: dashed 1px black ;
        /* margin-left: 4%;
        margin-right: 4%; */
    }

    .letsWork{
        padding-top: 1%;
        margin-bottom: 3%;
    }

    .learn{
        border: 1px solid black;
        border-radius: 3px;
        margin-right: 60%;
        padding-top: 1%;
        padding-bottom: 1%;
        padding-right: 3%;
        padding-left: 1%;
        margin-top: 3%;
        text-align: center;
        background-color: white;
        font-size: 85%;
    }

